--- a/index.html
+++ b/index.html
@@ -28,5 +28,115 @@
     <script defer src="./assets/js/index.js"></script>
     <title>Viajes Chile</title>
   </head>
-  <body></body>
+
+  <body>
+    <!--        Navbar           -->
+
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top text-light navbar-dark">
+        <div class="container">
+          <section>
+            <img
+              src="./assets/images/viajes.svg"
+              width="50px"
+              alt="Viajes Chile"
+            />
+          </section>
+          <h2 class="ms-1 mt-2">Viajes Chile</h2>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#" aria-current="page" href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#" aria-current="page"
+                  >Quienes Somos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#" aria-current="page"
+                  >Destacados</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#" aria-current="page"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <!--           Carrucel           -->
+
+      <section>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./assets/images/carousel1.jpg"
+                class="d-block w-100"
+                alt="Tu primer Viaje"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/images/carousel2.jpg"
+                class="d-block w-100"
+                alt="Moai"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/images/carousel3.jpg"
+                class="d-block w-100"
+                alt="Pinguino"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <!--                Quienes Somos               -->
+
+      <section class="container">
+        <section class="text-center mt-5"><h2>¿Quienes Somos?</h2>
+        </section>
+        <div></div>
+      </section>
+    </main>
+  </body>
 </html>
