--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       crossorigin="anonymous"
     ></script>
 
+    <script
+      src="https://kit.fontawesome.com/6bc2d0f6f2.js"
+      crossorigin="anonymous"
+    ></script>
+
     <script defer src="./assets/js/index.js"></script>
     <title>Viajes Chile</title>
   </head>
@@ -33,7 +38,10 @@
     <!--        Navbar           -->
 
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top text-light navbar-dark">
+      <nav
+        id="navbarw"
+        class="navbar navbar-expand-lg fixed-top text-light navbar-dark"
+      >
         <div class="container">
           <section>
             <img
@@ -132,10 +140,164 @@
 
       <!--                Quienes Somos               -->
 
-      <section class="container">
-        <section class="text-center mt-5"><h2>¿Quienes Somos?</h2>
+      <section class="bg-black text-light">
+        <section class="container">
+          <div><h2 class="text-center pt-5 mb-5">¿Quienes Somos?</h2></div>
+          <section class="row">
+            <section id="conviajes">
+              <div id="viajes" class="text-center">
+                <i class="fa-solid fa-plane"></i>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                repellendus adipisci repudiandae architecto, vero id eos odit
+                harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
+                voluptate nisi nostrum quas. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Facere laudantium ab dolorem odit
+                deserunt, rerum sed et, ducimus porro molestiae pariatur quod
+                corrupti repudiandae, perferendis aliquam consectetur amet
+                maiores quo. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Distinctio saepe vel similique doloribus voluptas
+                asperiores dolorum! Repudiandae, omnis beatae. A delectus ea
+                molestiae voluptatibus expedita accusamus consectetur provident
+                id porro?
+              </p>
+            </section>
+
+            <section id="condestino">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                repellendus adipisci repudiandae architecto, vero id eos odit
+                harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
+                voluptate nisi nostrum quas. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Facere laudantium ab dolorem odit
+                deserunt, rerum sed et, ducimus porro molestiae pariatur quod
+                corrupti repudiandae, perferendis aliquam consectetur amet
+                maiores quo. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Iusto non hic obcaecati quos natus veritatis ullam est
+                velit iste ducimus repellendus praesentium cupiditate, inventore
+                possimus autem temporibus maxime voluptatem! Placeat.
+              </p>
+              <div id="destino" class="text-center">
+                <i class="fa-solid fa-mountain"></i>
+              </div>
+            </section>
+
+            <section id="conruta">
+              <div id="ruta" class="text-center">
+                <i class="fa-solid fa-route"></i>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                repellendus adipisci repudiandae architecto, vero id eos odit
+                harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
+                voluptate nisi nostrum quas. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Facere laudantium ab dolorem odit
+                deserunt, rerum sed et, ducimus porro molestiae pariatur quod
+                corrupti repudiandae, perferendis aliquam consectetur amet
+                maiores quo. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Soluta ut magnam, totam hic, nobis quidem eos ducimus
+                delectus harum deserunt sapiente ex libero adipisci quasi
+                obcaecati laboriosam alias cum tempore?
+              </p>
+            </section>
+          </section>
         </section>
-        <div></div>
+      </section>
+
+      <!--               Cards                  -->
+
+      <section class="bg-black text-light">
+        <section class="container">
+          <section class="text-center pb-5">
+            <h3>Destacados</h3>
+          </section>
+
+          <section class="row">
+            <div class="col-3 mb-5">
+              <div class="card my-4">
+                <img
+                  src="./assets/images/card1.jpg"
+                  class="card-img-top img-fluid"
+                  alt="Plumon"
+                />
+                <div class="card-body">
+                  <p class="card-text text-start fs-5">
+                    Saltos del Rio Petrohué
+                  </p>
+                  <a class="list-group-item text-start text-secondary fs-5">
+                    Mus enim elementum dignissim class eleifend justo, ut nunc
+                    magnis est vulputate nostra, blandit erat luctus faucibus
+                    orci.<br />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Sección de cards 2 -->
+
+            <div class="col-3">
+              <div class="card my-4">
+                <img
+                  src="./assets/images/card2.jpg"
+                  class="card-img-top img-fluid"
+                  alt="Plumon"
+                />
+                <div class="card-body">
+                  <p class="card-text text-start fs-5">Desierto de Atacama</p>
+                  <a class="list-group-item text-start text-secondary fs-5">
+                    Congue fermentum dignissim rhoncus elementum ac nisi, proin
+                    phasellus lacinia sed faucibus mauris, taciti scelerisque
+                    nulla ornare.<br />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Sección de cards 3 -->
+
+            <div class="col-3">
+              <div class="card my-4">
+                <img
+                  src="./assets/images/card3.jpg"
+                  class="card-img-top img-fluid"
+                  alt="Plumon"
+                />
+                <div class="card-body">
+                  <p class="card-text text-start fs-5">Cajón del Maipo</p>
+                  <a class="list-group-item text-start text-secondary fs-5">
+                    Cubilia elementum posuere arcu rhoncus egestas lectus, diam
+                    aliquam laoreet ac eleifend risus, urna auctor inceptos
+                    mattis dapibus.<br />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+
+              <!-- Sección de cards 4 -->
+ 
+              <div class="col-3">
+                <div class="card my-4">
+                  <img
+                    src="./assets/images/card4.jpg"
+                    class="card-img-top img-fluid"
+                    alt="Plumon"
+                  />
+                  <div class="card-body">
+                    <p class="card-text text-start fs-5">Valdivia</p>
+                    <a class="list-group-item text-start text-secondary fs-5">
+                      Congue fermentum dignissim rhoncus elementum ac nisi, proin
+                      phasellus lacinia sed faucibus mauris, taciti scelerisque
+                      nulla ornare.<br />
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+
+          </section>
+        </section>
       </section>
     </main>
   </body>
