--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                   class="card-img-top img-fluid"
                   alt="Plumon"
                 />
-                <div class="card-body">
-                  <p class="card-text text-start fs-5">
+                <div class="card-body bg-info">
+                  <p class="card-text text-start fs-5 text-light">
                     Saltos del Rio Petrohué
                   </p>
-                  <a class="list-group-item text-start text-secondary fs-5">
+                  <a class="list-group-item text-start text-light fs-5">
                     Mus enim elementum dignissim class eleifend justo, ut nunc
                     magnis est vulputate nostra, blandit erat luctus faucibus
                     orci.<br />
@@ -243,9 +243,11 @@
                   class="card-img-top img-fluid"
                   alt="Plumon"
                 />
-                <div class="card-body">
-                  <p class="card-text text-start fs-5">Desierto de Atacama</p>
-                  <a class="list-group-item text-start text-secondary fs-5">
+                <div class="card-body bg-info">
+                  <p class="card-text text-start fs-5 text-light">
+                    Desierto de Atacama
+                  </p>
+                  <a class="list-group-item text-start text-light fs-5">
                     Congue fermentum dignissim rhoncus elementum ac nisi, proin
                     phasellus lacinia sed faucibus mauris, taciti scelerisque
                     nulla ornare.<br />
@@ -263,9 +265,11 @@
                   class="card-img-top img-fluid"
                   alt="Plumon"
                 />
-                <div class="card-body">
-                  <p class="card-text text-start fs-5">Cajón del Maipo</p>
-                  <a class="list-group-item text-start text-secondary fs-5">
+                <div class="card-body bg-info">
+                  <p class="card-text text-start fs-5 text-light">
+                    Cajón del Maipo
+                  </p>
+                  <a class="list-group-item text-start text-light fs-5">
                     Cubilia elementum posuere arcu rhoncus egestas lectus, diam
                     aliquam laoreet ac eleifend risus, urna auctor inceptos
                     mattis dapibus.<br />
@@ -274,28 +278,61 @@
               </div>
             </div>
 
+            <!-- Sección de cards 4 -->
 
-              <!-- Sección de cards 4 -->
- 
-              <div class="col-3">
-                <div class="card my-4">
-                  <img
-                    src="./assets/images/card4.jpg"
-                    class="card-img-top img-fluid"
-                    alt="Plumon"
-                  />
-                  <div class="card-body">
-                    <p class="card-text text-start fs-5">Valdivia</p>
-                    <a class="list-group-item text-start text-secondary fs-5">
-                      Congue fermentum dignissim rhoncus elementum ac nisi, proin
-                      phasellus lacinia sed faucibus mauris, taciti scelerisque
-                      nulla ornare.<br />
-                    </a>
-                  </div>
+            <div class="col-3">
+              <div class="card my-4">
+                <img
+                  src="./assets/images/card4.jpg"
+                  class="card-img-top img-fluid"
+                  alt="Plumon"
+                />
+                <div class="card-body bg-info">
+                  <p class="card-text text-start fs-5 text-light">Valdivia</p>
+                  <a class="list-group-item text-start text-light fs-5">
+                    Congue fermentum dignissim rhoncus elementum ac nisi, proin
+                    phasellus lacinia sed faucibus mauris, taciti scelerisque
+                    nulla ornare.<br />
+                  </a>
                 </div>
               </div>
+            </div>
+          </section>
+        </section>
+      </section>
 
+      <!--                  Contacto                      -->
 
+      <section class="bg-black text-light">
+        <section class="container">
+          <div><h2 class="text-center pt-5 mb-5">Contacto</h2></div>
+
+          <section>
+            <form>
+              <fieldset disabled>
+                <legend></legend>
+                <div class="mb-3">
+                  <label for="disabledTextInput" class="form-label"
+                    >Nombre</label
+                  >
+                  <input
+                    type="text"
+                    id="disabledTextInput"
+                    class="form-control"
+                    placeholder="Nombre"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="disabledSelect" class="form-label"
+                    >Asunto</label
+                  >
+                  <select id="disabledSelect" class="form-select">
+                    <option>Asunto</option>
+                  </select>
+                </div>
+                <button type="submit" class="btn btn-primary mb-5">Enviar</button>
+              </fieldset>
+            </form>
           </section>
         </section>
       </section>
