--- a/index.html
+++ b/index.html
@@ -323,19 +323,35 @@
                   />
                 </div>
                 <div class="mb-3">
-                  <label for="disabledSelect" class="form-label"
-                    >Asunto</label
-                  >
+                  <label for="disabledSelect" class="form-label">Asunto</label>
                   <select id="disabledSelect" class="form-select">
                     <option>Asunto</option>
                   </select>
                 </div>
-                <button type="submit" class="btn btn-primary mb-5">Enviar</button>
+                <button type="submit" class="btn btn-primary mb-5">
+                  Enviar
+                </button>
               </fieldset>
             </form>
           </section>
         </section>
       </section>
+
+      <!--              Footer                    -->
+
+      <footer class="bg-info text-light">
+        <section class="container py-4">
+          <section class="d-flex">
+            <div class="ms-5"><h3>Viajes Chile</h3></div>
+            <div id="iconosfooter" class="ms-auto me-5">
+              <i class="fa-brands fa-github"></i
+              ><i class="fa-brands fa-square-instagram"></i
+              ><i class="fa-brands fa-square-twitter"></i
+              ><i class="fa-brands fa-facebook"></i>
+            </div>
+          </section>
+        </section>
+      </footer>
     </main>
   </body>
 </html>
