--- a/index.html
+++ b/index.html
@@ -328,7 +328,12 @@
                     <option>Asunto</option>
                   </select>
                 </div>
-                <button type="submit" class="btn btn-primary mb-5">
+                <div class="form-group">
+                  <label class="mb-3" for="exampleFormControlTextarea1">Mensaje</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary mb-5 mt-4">
                   Enviar
                 </button>
               </fieldset>
