--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 
     <script defer src="./assets/js/index.js"></script>
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.png"
+      type="image/x-icon"
+    />
     <title>Viajes Chile</title>
   </head>
 
@@ -159,7 +164,7 @@
               <div id="viajes" class="text-center">
                 <i class="fa-solid fa-plane"></i>
               </div>
-              <p>
+              <p id="viajestext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
                 repellendus adipisci repudiandae architecto, vero id eos odit
                 harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
@@ -177,7 +182,7 @@
             </section>
 
             <section id="condestino">
-              <p>
+              <p id="destinotext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
                 repellendus adipisci repudiandae architecto, vero id eos odit
                 harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
@@ -199,7 +204,7 @@
               <div id="ruta" class="text-center">
                 <i class="fa-solid fa-route"></i>
               </div>
-              <p>
+              <p id="rutatext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
                 repellendus adipisci repudiandae architecto, vero id eos odit
                 harum iusto ipsa, qui ut reprehenderit, perferendis ab officiis
